Fix: add flex-wrap to btn-container class

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -47,6 +47,55 @@ nav {
     background-color: transparent;
 }
 
+/* Buttons */
+
+.btn-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-self: flex-start;
+}
+.main-btn {
+    border-radius: 30px;
+    color: inherit;
+    font-weight: 600;
+    position: relative;
+    border: 1px solid var(--color-secondary);
+    margin: 0.5rem;
+    display: flex;
+    align-items: center;
+    overflow-x: hidden; 
+    text-decoration: none;
+    .btn-text {
+        padding: 0 1rem;    
+    }
+    .btn-icon {
+        background-color: var(--color-secondary);
+        color: var(--color-primary);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        padding: 1rem;
+    }
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translateX(100%);
+        transition: all .4s ease-out;
+        z-index: -1;
+    }
+    &:hover {
+        &::before {
+            width: 100%;
+            height: 100%;
+            background-color: var(--color-secondary);
+            transform: translateX(0);
+        }
+    }
+}
+
 /* Home section */
 
 header {
@@ -118,54 +167,6 @@ header {
     }
 }
 
-/* Buttons */
-
-.btn-container {
-    display: flex;
-    align-self: flex-start;
-}
-.main-btn {
-    border-radius: 30px;
-    color: inherit;
-    font-weight: 600;
-    position: relative;
-    border: 1px solid var(--color-secondary);
-    margin: 0.5rem;
-    display: flex;
-    align-items: center;
-    overflow-x: hidden; 
-    text-decoration: none;
-    .btn-text {
-        padding: 0 1rem;    
-    }
-    .btn-icon {
-        background-color: var(--color-secondary);
-        color: var(--color-primary);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 50%;
-        padding: 1rem;
-    }
-    &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: translateX(100%);
-        transition: all .4s ease-out;
-        z-index: -1;
-    }
-    &:hover {
-        &::before {
-            width: 100%;
-            height: 100%;
-            background-color: var(--color-secondary);
-            transform: translateX(0);
-        }
-    }
-}
-
 /* 'About' section */
 
  .main-title {
@@ -205,7 +206,6 @@ header {
     .personal-info {
         flex: 0 0 60%;
         max-width: 60%;
-        //background-color: red;
         margin-top: 2rem;
         .info-container {
             display: flex;
@@ -231,9 +231,9 @@ header {
         .skill-item {
             flex: 0 0 100%;
             max-width: 100%;
-            margin-bottom: 30px;
+            margin-bottom: 5px;
             h5 {
-                line-height: 40px;
+                line-height: 20px;
                 font-weight: 700;
             }
             .progress {
@@ -255,6 +255,7 @@ header {
                     top: 0;
                     left: 50%;
                     transform: translateX(-50%);
+                    font-size: 14px;
                     font-weight: 700;
                     color: var(--color-primary);
                 }    
